fix some IntelliJ warnings